# miogenes

./: .env  .gitignore  .gitmodules  Cargo.toml  justfile  model.py  proc.py  x.py
.cargo/: config.toml
.sqlx/: query-05f0291e05b3add18a630539cd1ac1c298e507110170dec7c1254bafaf615b03.json  query-0836ff979415ac70c2d1a6858e87f280c2e2b53260ca92aa1a1d110f46039f78.json  query-1b1d1c36b0f2f0169c517f654c4c71a0177823df7271018b781bfd310f7fbb31.json  query-1debdf75c95ecc4703fc35cd88daf9d8e0c053f9995d2d32fed18ada280b1cb6.json  query-22f49f47e8328a49c703a2fa3441d96ad0388154e2a443ee6e3ea850f03a51f0.json  query-2a9c26385a3d2366dcf2a45d48c10556c8a233b9700e43bc4dfe419fa0700c7f.json  (+20 more)
backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/entity/: album.rs  artist.rs  cover_art.rs  join_playlist_track.rs  mod.rs  playlist.rs  prelude.rs  track.rs  user.rs  user_token.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  main.rs
backend/migrations/: 20230531183543_initial.sql  20230621023136_new_secret_mgmt.sql  20230817191707_initial.sql
backend/src/: db.rs  env.rs  error.rs  gen_openapi.rs  main.rs  user.rs
backend/src/endpoints/: folders.rs  idquery.rs  mod.rs  query.rs  search.rs  track_manage.rs
backend/src/subtasks/: mod.rs  secret.rs  track_upload.rs
backend/test_files/: .gitignore
common/: Cargo.toml
common/src/: auth.rs  lib.rs  msgstructs.rs  retstructs.rs
frontend/: .gitignore  .metadata  Cargo.toml  Trunk.toml  build.rs  index.html  pubspec.yaml  rust.cmake
frontend/.cargo/: config.toml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/frontend/: MainActivity.kt
frontend/android/app/src/main/kotlin/xyz/powpingdone/miogenes/: MainActivity.kt
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/glue/: Cargo.toml  build.rs
frontend/glue/src/: api.rs  auth.rs  bridge_generated.io.rs  bridge_generated.rs  error.rs  lib.rs  mirror.rs  player.rs
frontend/glue/src/player/: audio_dev.rs  decoder.rs  mod.rs
frontend/glue/src/server/: auth.rs  fetch.rs  folder.rs  fs.rs  mod.rs
frontend/integration_test/: simple_test.dart
frontend/ios/Runner/: Info.plist
frontend/lib/: bridge_generated.dart  ffi.dart  login.dart  main.dart  main_page.dart  mio_albums_page.dart  mio_player_page.dart  mio_upload_page.dart  protocol.dart  protocol.g.dart  server_rpc.dart  signup.dart  url_login.dart
frontend/lib/mainpage/: albums.dart  folderview.dart  mainpage.dart  player.dart  toplevel.dart  upload.dart
frontend/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
frontend/linux/: CMakeLists.txt  rust.cmake
frontend/rt/: Cargo.toml
frontend/rt/src/: lib.rs
frontend/rust/: Cargo.toml
frontend/rust/src/: error.rs  frb_generated.rs  lib.rs  player.rs
frontend/rust_builder/: pubspec.yaml
frontend/rust_builder/android/: build.gradle  settings.gradle
frontend/rust_builder/android/src/main/: AndroidManifest.xml
frontend/rust_builder/ios/: mio-audio.podspec
frontend/rust_builder/linux/: CMakeLists.txt
frontend/rust_builder/macos/: mio-audio.podspec
frontend/rust_builder/windows/: CMakeLists.txt
frontend/src/: albums.rs  error.rs  folder_select.rs  main.rs  player.rs  static_assets.rs  tasks.rs  upload.rs  user.rs
frontend/src/mainpage/: mod.rs  player.rs  routepts.rs  tasks.rs
frontend/test/: widget_test.dart
frontend/ui/: albums.slint  common.slint  folderselect.slint  login.slint  mainui.slint  player.slint  signup.slint  toplevel.slint  upload.slint
frontend/windows/: CMakeLists.txt
lockless-pushbuf/: Cargo.toml
miogenes-model/scrape/: Cargo.toml  backupdownload.rs  keyate.py
miogenes-model/scrape/src/: main.rs
miogenes-server/: .gitignore  Cargo.toml  compile.sh  justfile
miogenes-server/backend/: Cargo.toml
miogenes-server/backend/entity/: Cargo.toml
miogenes-server/backend/entity/src/: lib.rs
miogenes-server/backend/entity/src/entity/: album.rs  artist.rs  cover_art.rs  join_playlist_track.rs  mod.rs  playlist.rs  prelude.rs  track.rs  user.rs  user_token.rs
miogenes-server/backend/migration/: Cargo.toml
miogenes-server/backend/migration/src/: m20220101_000001_create_table.rs
miogenes-server/backend/src/: db.rs  db_query.rs  error.rs  main.rs  migration.rs  user.rs
miogenes-server/backend/src/db/: migrations.rs  mod.rs  types.rs
miogenes-server/backend/src/endpoints/: idquery.rs  mod.rs  query.rs  search.rs  track_manage.rs
miogenes-server/backend/src/subtasks/: mod.rs  track_upload.rs
miogenes-server/common/: Cargo.toml
miogenes-server/common/src/: lib.rs  msgstructs.rs  retstructs.rs
miogenes-server/frontend/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
miogenes-server/frontend/.cargo/: config.toml
miogenes-server/frontend/src/: main.rs  render.rs  routepts.rs  rt.rs  state.rs  static_assets.rs  tasks.rs
miogenes-server/frontend/src/mainpage/: mod.rs  routepts.rs  tasks.rs
miogenes-server/miogenes-backend/: Cargo.toml
miogenes-server/miogenes-backend/entity/: Cargo.toml
miogenes-server/miogenes-backend/entity/src/entities/: album_art_table.rs  album_table.rs  artist_table.rs  mod.rs  prelude.rs  track_table.rs  user_table.rs
miogenes-server/miogenes-backend/migration/: Cargo.toml
miogenes-server/miogenes-backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220810_223938_user_table.rs  m20220901_122621_add_fname_imghash.rs
miogenes-server/miogenes-backend/src/: heartbeat.rs  main.rs  track.rs
miogenes-server/miogenes-backend/src/endpoints/: heartbeat.rs  mod.rs  search.rs  track.rs
miogenes-server/miogenes-backend/src/subtasks/: mod.rs  track_upload.rs
miogenes-server/miogenes-frontend/: Cargo.toml
miogenes-server/miogenes-frontend/src/: main.rs
model/minienc/: Cargo.toml
model/minienc/raw/: .gitignore
model/minienc/src/: load.rs  main.rs  model.rs
model/scrape/: Cargo.toml  keyate.py
model/scrape/src/: main.rs
qoa-enc/: Cargo.toml
qoa-enc/src/: lib.rs
(+12 files in other folders)
