[workspace]
members = ["frontend", "frontend/glue", "common", "backend", "qoa-enc"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.7"
axum-extra = "0.9"
axum-test = "14.9"
base64 = "0.22"
bytemuck = "1.16"
chrono = "0.4"
console-subscriber = "0.2"
cpal = "0.15"
crossbeam = "0.8"
ctrlc = "3.4"
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-audio = "0.22"
gstreamer-pbutils = "0.22"
hound = "3.5"
image = "0.25"
jsonwebtoken = "9.3"
konst = "0.3"
log = "0.4"
mel_spec = "0.2"
mel_spec_pipeline = "0.2"
native-dialog = "0.7"
ndarray = "0.15"
num_cpus = "1"
once_cell = "1"
ort = "1.16"
parking_lot = "0.12"
path-absolutize = "3"
qoaudio = "0.7"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
ringbuffer = "0.15"
rodio = { version = "0.18", default-features = false }
rubato = "0.15"
sanitize-filename = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
slint = "1.6"
slint-build = "1.6"
souvlaki = "0.7"
sqlx = "0.7"
symphonia = "0.5"
thiserror = "1.0"
tokio = "1.35"
tokio-stream = "0.1"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
uuid = "1.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
