[workspace]
members = ["protocol", "backend"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.7"
axum-extra = "0.9"
axum-test = "15.2"
base64 = "0.22"
chrono = "0.4"
console-subscriber = "0.3"
ctrlc = "3.4"
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-audio = "0.22"
gstreamer-pbutils = "0.22"
image = "0.25"
jsonwebtoken = "9.3"
konst = "0.3"
log = "0.4"
mel_spec = "0.2"
mel_spec_pipeline = "0.2"
ndarray = "0.15"
num_cpus = "1"
once_cell = "1"
ort = "1.16"
path-absolutize = "3"
rand = "0.8"
rubato = "0.15"
sanitize-filename = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = "0.7"
symphonia = "0.5"
thiserror = "1.0"
tokio = "1.38"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
uuid = "1.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
