[package]
edition = "2021"
name = "mio-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
argon2 = "0.5"
axum = { version = "0.7", features = ["ws", "macros", "http2"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
gstreamer = { version = "0.21", features = ["v1_20"] }
gstreamer-app = { version = "0.21", features = ["v1_20"] }
gstreamer-audio = { version = "0.21", features = ["v1_20"] }
gstreamer-pbutils = { version = "0.21", features = ["v1_20"] }
image = { version = "0.24", features = ["webp-encoder"] }
konst = "0.3"
log = "0.4"
mio-qoa-impl = { path = "../qoa-enc" }
mio-common = { path = "../common" }
num_cpus = "1"
once_cell = { version = "1", features = ["parking_lot"] }
path-absolutize = "3"
rand = { version = "0.8", features = ["log", "min_const_gen"] }
sanitize-filename = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full", "tracing"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["full", "tokio"] }
base64 = "0.21"
tower = { version = "0.4", features = ["full", "tokio"] }
jsonwebtoken = "9.2"
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
  "migrate",
] }
symphonia = { version = "0.5", features = [
  "all-codecs",
  "all-formats",
  "all",
  "mpa",
] }
rubato = { version = "0.14", features = ["log"] }
ort = "1.16"
mel_spec = "0.2"
mel_spec_pipeline = "0.2"
ndarray = "0.15"
dotenvy = "0.15"
tracing = "0.1"
console-subscriber = { version = "0.2", features = ["parking_lot"] }
ctrlc = "3.4"
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
axum-test = "14.2"
serde_urlencoded = "0.7"
