[package]
edition = "2021"
name = "mio-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
argon2 = { workspace = true }
axum = { workspace = true, features = ["ws", "macros", "http2"] }
chrono = { workspace = true, features = ["serde"] }
env_logger = { workspace = true }
gstreamer = { workspace = true, features = ["v1_20"] }
gstreamer-app = { workspace = true, features = ["v1_20"] }
gstreamer-audio = { workspace = true, features = ["v1_20"] }
gstreamer-pbutils = { workspace = true, features = ["v1_20"] }
image = { workspace = true }
konst = { workspace = true }
log = { workspace = true }
mio-qoa-impl = { path = "../qoa-enc" }
mio-common = { path = "../common" }
num_cpus = { workspace = true }
once_cell = { workspace = true, features = ["parking_lot"] }
path-absolutize = { workspace = true }
rand = { workspace = true, features = ["log", "min_const_gen"] }
sanitize-filename = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tower-http = { workspace = true, features = ["full", "tokio"] }
base64 = { workspace = true }
tower = { workspace = true, features = ["full", "tokio"] }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
symphonia = { workspace = true, features = ["all-codecs", "all-formats", "all", "mpa"] }
rubato = { workspace = true, features = ["log"] }
ort = { workspace = true }
mel_spec = { workspace = true }
mel_spec_pipeline = { workspace = true }
ndarray = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
console-subscriber = { workspace = true, features = ["parking_lot"] }
ctrlc = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }

[dev-dependencies]
axum-test = { workspace = true }
serde_urlencoded = { workspace = true }
