[package]
edition = "2021"
name = "mio-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws", "macros", "http2"] }
axum-extra = { workspace = true, features = ["typed-header"] }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
console-subscriber = { workspace = true, features = ["parking_lot"] }
ctrlc = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
gstreamer = { workspace = true, features = ["v1_20"] }
gstreamer-app = { workspace = true, features = ["v1_20"] }
gstreamer-audio = { workspace = true, features = ["v1_20"] }
gstreamer-pbutils = { workspace = true, features = ["v1_20"] }
image = { workspace = true }
jsonwebtoken = { workspace = true }
konst = { workspace = true }
log = { workspace = true }
mel_spec = { workspace = true }
mel_spec_pipeline = { workspace = true }
mio-protocol = { path = "../protocol" }
ndarray = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true, features = ["parking_lot"] }
ort = { workspace = true }
path-absolutize = { workspace = true }
rand = { workspace = true, features = ["log", "min_const_gen"] }
rubato = { workspace = true, features = ["log"] }
sanitize-filename = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
symphonia = { workspace = true, features = ["all-codecs", "all-formats", "all", "mpa"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tower-http = { workspace = true, features = ["full", "tokio"] }
tower = { workspace = true, features = ["full", "tokio"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
axum-test = { workspace = true }
serde_urlencoded = { workspace = true }
