[package]
edition = "2021"
name = "mio-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["serde"] }
utoipa = {version = "3.3", features = ["uuid"]}
