[package]
name = "mio-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
slint = { version = "1.3", features = ["gettext", "log"] }
mio-glue = { path = "glue" }
anyhow = "1.0"
tokio = {version = "1.35", features = ["sync"]}
crossbeam = "0.8.4"
uuid = "1.7"

[build-dependencies]
slint-build = "1.3"
