[package]
name = "mio-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { workspace = true }
slint = { workspace = true, features = ["gettext", "log"] }
mio-glue = { path = "glue" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
crossbeam = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
native-dialog = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
