[package]
name = "mio-qoa-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["extern_crate_std"] }
thiserror = "1.0.40"

[dev-dependencies]
hound = "3.5.0"