[package]
name = "mio-glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "1", features = ["uuid"]}
once_cell = "1"
num_cpus = "1.15"
anyhow = "1.0"
konst = "0.3"
mio-common = {path = "../../common"}
ureq = { version = "2.7", features = ["json"] }
chrono = "0.4"
base64 = "0.21"
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = "1"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
qoaudio = { version = "0.6", features = ["rodio"] }
rodio = { version = "0.17", default-features = false }
parking_lot = "0.12"
cpal = { version = "0.15.2", features = ["jack"] }
