[package]
name = "mio-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1"
num_cpus = "1.15"
anyhow = "1.0"
konst = "0.3"
mio-common = { path = "../../common" }
chrono = "0.4"
serde_json = "1.0"
serde_urlencoded = "0.7"
uuid = "1"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
qoaudio = { version = "0.7", features = ["rodio"] }
rodio = { version = "0.17", default-features = false }
parking_lot = "0.12"
cpal = { version = "0.15", features = ["jack"] }
log = "0.4"
souvlaki = "0.7"
ringbuffer = "0.15"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
smol = "2.0"
async-compat = "0.2"


[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
ndk-context = "0.1"
