[package]
name = "mio-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = { workspace = true }
num_cpus = { workspace = true }
anyhow = { workspace = true }
konst = { workspace = true }
mio-common = { path = "../../common" }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
uuid = { workspace = true }
crossbeam = { workspace = true, features = ["crossbeam-channel"] }
qoaudio = { workspace = true, features = ["rodio"] }
rodio = { workspace = true }
parking_lot = { workspace = true }
cpal = { workspace = true, features = ["jack"] }
log = { workspace = true }
souvlaki = { workspace = true }
ringbuffer = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json", "stream", "blocking"] }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["full"] }
futures = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
ndk-context = "0.1"
