[package]
name = "mio-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "async-compression",
    "brotli",
    "gzip",
] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["zerocopy", "serde"] }
