[package]
edition = "2021"
name = "mio_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
argon2 = "0.4.1"
axum = { version = "0.6.1", features = [
    "multipart",
    "ws",
    "headers",
    "macros"
] }
axum-extra = { version = "0.4.2", features = ["spa"] }
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
gstreamer = { version = "0.19.3", features = ["v1_20"] }
gstreamer-app = { version = "0.19.2", features = ["v1_20"] }
gstreamer-audio = { version = "0.19.3", features = ["v1_20"] }
gstreamer-pbutils = { version = "0.19.2", features = ["v1_20"] }
image = "0.24.5"
konst = "0.3.4"
log = "0.4.17"
mio_common = { path = "../common" }
mio_migration = { path = "./migration" }
mio_entity = { path = "./entity" }
num_cpus = "1.14.0"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
path-absolutize = "3.0.14"
rand = { version = "0.8.5", features = ["log", "min_const_gen"] }
sanitize-filename = "0.4.0"
sea-orm = { version = "0.10.5", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio-rustls",
    "uuid",
    "debug-print"
] }
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
thiserror = "1.0.37"
async-trait = "0.1.59"
