[package]
edition = "2021"
name = "mio_backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
argon2 = "0.5"
axum = { version = "0.6", features = ["ws", "headers", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
gstreamer = { version = "0.20", features = ["v1_20"] }
gstreamer-app = { version = "0.20", features = ["v1_20"] }
gstreamer-audio = { version = "0.20", features = ["v1_20"] }
gstreamer-pbutils = { version = "0.20", features = ["v1_20"] }
image = { version = "0.24", features = ["webp-encoder"] }
konst = "0.3"
log = "0.4"
mio_common = { path = "../common" }
mio_migration = { path = "./migration" }
mio_entity = { path = "./entity" }
num_cpus = "1.15"
once_cell = { version = "1.17", features = ["parking_lot"] }
path-absolutize = "3.0"
rand = { version = "0.8", features = ["log", "min_const_gen"] }
sanitize-filename = "0.4"
sea-orm = { version = "0.11",features = [
  "sqlx-sqlite",
  "macros",
  "runtime-tokio-rustls",
  "uuid",
  "debug-print",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.25", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
tower-http = { version = "0.4", features = ["fs", "tokio"] }
base64 = "0.21"
