[package]
edition = "2021"
name = "mio_frontend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
log = "0.4.17"
mio_common = { path = "../common" }
wasm-bindgen-futures = "0.4.34"
serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }
js-sys = "0.3.61"
oneshot = "0.1.5"
wasm-bindgen = "0.2.84"
anyhow = "1.0.69"
uuid = "1.2.2"
base64 = "0.21.0"
serde_url_params = "0.2.1"
wasm-logger = "0.2.0"
dioxus = "0.3.2"
dioxus-web = "0.3.0"
dioxus-router = { version = "0.3.0", features = ["web"] }
futures = "0.3.26"
web-sys = { version = "0.3.61", features = [
  "FileList",
  "HtmlInputElement",
  "Window",
  "Document",
  "Element",
  "File",
  "Blob",
  "HtmlDocument",
  "ReadableStream",
] }
chrono = "0.4.23"
wasm-cookies = "0.2.1"
