[package]
edition = "2021"
name = "mio_frontend"
version = "0.1.0"

[profile.release]
lto = true
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1"
log = "0.4"
mio_common = { path = "../common" }
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
oneshot = "0.1"
wasm-bindgen = "0.2"
anyhow = "1.0"
uuid = "1.3"
wasm-logger = "0.2"
dioxus = { version = "0.3", default_features = false, features = [
  "macro",
  "hooks",
] }
dioxus-web = "0.3"
dioxus-router = { version = "0.3", features = ["web"] }
futures = "0.3"
web-sys = { version = "0.3", features = [
  "FileList",
  "HtmlInputElement",
  "Window",
  "Document",
  "Element",
  "File",
  "Blob",
  "HtmlDocument",
  "ReadableStream",
  "FileReader",
] }
chrono = "0.4"
wasm-cookies = "0.2"
serde_urlencoded = "0.7"
tokio = { version = "1.26", features = ["sync", "rt", "parking_lot"] }
parking_lot = { version = "0.12", features = ["nightly"] }
reqwest = { version = "0.11", features = [
  "native-tls",
  "wasm-streams",
  "json",
] }
base64 = "0.21"
