[package]
name = "miogenes-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
konst = "0.2.15"
serde = { version = "1.0.139", features = ["derive"] }
serde_with = { version = "1.14.0", features = ["base64"] }
tokio = { version = "1.19.2", features = ["full"] }
