[package]
edition = "2021"
name = "miogenes-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity_self = { path = "entity" }
migration = { path = "migration" }

actix-web = "4.1.0"
anyhow = { version = "1.0.60", features = ["backtrace"] }
blurhash = "0.1.1"
env_logger = "0.9.0"
konst = "0.2.15"
sea-orm = { version = "0.9.1", features = [
    "macros",
    "sqlx-all",
    "runtime-actix-rustls",
    "sqlx-mysql",
    "with-uuid",
] }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_with = { version = "2.0.0", features = ["base64"] }
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
actix-multipart = "0.4.0"
futures = "0.3.23"
