[package]
edition = "2021"
name = "miogenes-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
entity_self = { path = "entity" }
migration = { path = "migration" }
anyhow = { version = "1.0.60", features = ["backtrace"] }
axum = { version = "0.5.15", features = ["multipart"] }
blurhash = "0.1.1"
env_logger = "0.9.0"
futures = "0.3.23"
konst = "0.2.15"
once_cell = { version = "1.13.1", features = ["parking_lot"] }
sea-orm = { version = "0.9.1", features = [
  "macros",
  "sqlx-all",
  "runtime-actix-rustls",
  "sqlx-mysql",
  "with-uuid",
] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.83"
serde_with = { version = "2.0.0", features = ["base64"] }
tokio = { version = "1.19.2", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
sanitize-filename = "0.4.0"
gstreamer-pbutils = { version = "0.18.7", features = [
  "v1_10",
  "v1_12",
  "v1_14",
  "v1_16",
  "v1_18",
  "v1_20"
] }
gstreamer = { version = "0.18.8", features = [
  "v1_10",
  "v1_12",
  "v1_14",
  "v1_16",
  "v1_18",
  "v1_20"
] }
image = "0.24.3"
sha2 = "0.10.5"
gstreamer-app = { version = "0.18.7", features = [
  "v1_10",
  "v1_12",
  "v1_14",
  "v1_16",
  "v1_18",
  "v1_20"
] }

[profile.release]
lto = true
