[package]
name = "mio-minienc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
burn = "0.8"
rubato = "0.14"
serde = { version = "1.0", features = ["derive"] }
symphonia = { version = "0.5", features = ["all", "mpa", "symphonia-bundle-mp3"] }
uuid = { version = "1.4", features = ["v4"] }
