[package]
name = "mio-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.11"
tokio = {version = "1.28", features = ["full"]}
futures = "0.3"
indicatif = "0.17"
governor = "0.5"
reqwest = "0.11"
nonzero_ext = "0.3"
anyhow = "1.0"
rand = "0.8"
