[package]
name = "entity_self"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9.1", features = ["macros", "sqlx-all", "runtime-actix-rustls", "with-uuid"] }
serde = "1.0.144"
